# BaseballFaker

./: LICENSE  README.md  assumptions.json  example.ipynb  pyproject.toml
.github/workflows/: publish-to-test-pypi.yml  python-package.yml  python-publish.yml
baseballfaker/: __init__.py  baseball.py
scripts/: example.ipynb  example.py  generator.py  sportfaker.py
sportfaker/: __init__.py  baseball.py
