[project]
name = "SportFaker"
version = "0.0.1"
authors = [
  { name="Josh Kolodny", email="kolo.josh@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sportfaker"
"Bug Tracker" = "https://github.com/pypa/sportfaker/issues"
