[project]
name = "BaseballFaker"
version = "0.0.3"
authors = [
  { name="Josh Kolodny", email="kolo.josh@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "faker",
    "numpy",
    "requests"
]

[project.urls]
"Homepage" = "https://github.com/JKolodny/BaseballFaker"
"Bug Tracker" = "https://github.com/JKolodny/BaseballFaker/issues"

[build-system]
requires = ["setuptools", "wheel"]
